daniel_dominguez/session01/exercise03/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: wordpress
    track: stable
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: wordpress
        - secretRef:
            name: wordpress
        name: wordpress
        image: docker.io/bitnami/wordpress:4.9.5
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /wp-login.php
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /wp-login.php
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /bitnami
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: wordpress
