daniel_dominguez/session01/exercise03/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  type: ExternalName
  externalName: kubernetes-training.cfxyxg2jnovx.us-east-1.rds.amazonaws.com
